Fix Vercel deployment: configure output directory and remove build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.html",
   "scripts": {
     "dev": "python -m http.server 3000",
-    "build": "echo 'Static site - no build needed'",
     "start": "python -m http.server 8000"
   },
   "keywords": [
@@ -21,10 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "your-repository-url-here"
+    "url": "https://github.com/umarJ-max/Tools-Collection.git"
   },
-  "homepage": "your-vercel-url-here",
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "homepage": "your-vercel-url-here"
 }
